# website-qa-chatbot

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
config/: settings.py
crawler/: web_loader.py
data/faiss_index/: index.faiss  index.pkl
embeddings/: embedder.py
llm/: groq_client.py
rag/: qa_chain.py
utils/: text_splitter.py  validators.py
vectordb/: faiss_store.py
